variadics/tests/compile-fail-nightly/var_type_badtype_call.stderr
error[E0425]: cannot find type `MyIdent` in this scope
 --> tests/compile-fail-nightly/var_type_badtype_call.rs:4:41
  |
4 |     type _List = var_type!(String, u32, MyIdent(), bool);
  |                                         ^^^^^^^ not found in this scope
